--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 
     <style>
         body{
-        background-image: url(../static/image/register_bg.jpg);
+        background-image: url(../static/register_bg.jpg);
         background-attachment: fixed;
         background-size:100% auto;
         background-repeat: no-repeat
@@ -58,7 +58,7 @@
 <body >
 
     <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
-        <a href="/homepage" class="navbar-brand">SMOKE HOUSE</a>
+        <a href="/homepage" class="navbar-brand">FOODIES</a>
         <!-- button to trigger links for small screens-->
         <!-- this class(navbar-toggler) makes sure that the button is not visible when the browser window is at its largest. When the screen ()view port-->
         <!--is smaller like a phone the link will disappear and the menu button will appear on the upper right corner-->
@@ -70,16 +70,16 @@
             <!-- mr-auto stand for margin right auto. self explanatory -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a href="/homepage#meals" class="nav-link">Meals</a>
+                    <a href="#meals" class="nav-link">Meals</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/homepage#drinks" class="nav-link">Drinks</a>
+                    <a href="#drinks" class="nav-link">Drinks</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/homepage#dessert" class="nav-link">Dessert</a>
+                    <a href="#dessert" class="nav-link">Dessert</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/homepage#contactus" class="nav-link">Contact us</a>
+                    <a href="#contactus" class="nav-link">Contact us</a>
                 </li>
             </ul>
             <nav class="navbar navbar-light bg-white">
